# corpus-loom

./: .coveragerc  .gitignore  .ruff.toml  CONTRIBUTING.md  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: demo.py  usage.py
src/corpusloom/: __init__.py  chunking.py  cli.py  client.py  exceptions.py  json_mode.py  models.py  retrieval.py  store.py  utils.py
tests/: test_chunking.py  test_cli.py  test_client.py  test_jsonmode.py  test_mcdc_client.py  test_mcdc_jsonmode.py  test_mcdc_utils.py  test_smoke.py  test_store.py  test_utils.py
